<resources>
    <string name="app_name">UncleSam</string>
    <string name="general_volume">General Volume</string>
    <string name="source_spirit_volume">Source Spirit Volume</string>
    <string name="result_spirit_volume">Result Spirit Volume</string>
    <string name="calculate">CALCULATE</string>
    <string name="volume">volume</string>
    <string name="conc">conc</string>
    <string name="ml">ml</string>
    <string name="percent">%</string>
    <string name="to_add">Need to add %1$.2f ml of water</string>
    <string name="incorrect_data">Incorrect Data</string>
    <string name="water">Water</string>
    <string name="sugar">Sugar</string>
    <string name="gr">gr.</string>
    <string name="gm">GM</string>
    <string name="vol">% vol</string>
    <string name="total_amount">Total Amount</string>

</resources>
