<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yurima.unclesam.BragaActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/braga_waterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/braga_waterEditText"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:inputType="numberDecimal"
            android:hint="@string/ml"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/braga_sugarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/braga_sugarEditText"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:inputType="numberDecimal"
            android:hint="@string/gr"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/braga_gmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/gm"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/braga_gmcheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/braga_gmTextView"
            android:layout_toEndOf="@+id/braga_gmTextView"
            android:layout_marginLeft="16dp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/braga_gmSpinner"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/braga_VolumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vol"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/braga_volumeEditText"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:inputType="numberDecimal"
            android:hint="@string/percent"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/braga_amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/braga_amountEditText"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:inputType="numberDecimal"
            android:hint="@string/ml"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        >
        <Button
            android:id="@+id/braga_calculateButton"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@drawable/button_256"
            android:scaleType="centerCrop"
            android:text="@string/calculate"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


</LinearLayout>
</ScrollView>