<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yurima.unclesam.WaterDownActivity"
    android:orientation="vertical"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sourceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_volume"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/sourceVolumeEditText"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:inputType="numberDecimal"
            android:hint="@string/ml"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sourceSpiritVolumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/source_spirit_volume"
            android:textSize="18sp"
            android:layout_margin="16dp"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/sourceConcentrationEditText"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="numberDecimal"
            android:layout_margin="16dp"
            android:hint="@string/percent"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_spirit_volume"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/resultConcentrationEditText"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="numberDecimal"
            android:layout_margin="16dp"
            android:hint="@string/percent"

            />

    </RelativeLayout>


    <Button
        android:id="@+id/calculateButton"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@drawable/button_256"
        android:scaleType="centerCrop"
        android:text="@string/calculate"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_margin="32dp"
    />

    <TextView
        android:id="@+id/calculateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        tools:text="Add some water"
        android:textSize="18sp"
        android:layout_margin="16dp"

        />


</LinearLayout>
